# trashure

./: .gitignore  Cargo.toml  configuration.json  plan.txt  useful.txt
.cargo/: config.toml
assets/objects/: plower.glb  radar.glb  radar_round.glb  radar_sector.glb  recycler.glb  recycler2.glb  solid_sphere.glb  target.glb
assets/shaders/: radar.wgsl
blender/: plower.blend  plower.blend1  radar.blend  radar.blend1  radar_round.blend  radar_round.blend1  radar_sector.blend  radar_sector.blend1  recycler.blend  recycler.blend1  solid_sphere.blend  solid_sphere.blend1  target.blend  target.blend1
src/: conf.rs  debugeditor.rs  main.rs
src/game/: machines.rs  material.rs  mod.rs  voxelmailbox.rs
src/graphics/: animated.rs  atlases.rs  camera.rs  camera3d.rs  cursor.rs  dbgtext.rs  debug3d.rs  flyingvoxel.rs  fps.rs  gamemenu.rs  lazyworld.rs  machines.rs  mod.rs  pieces.rs  positions.rs  recolor.rs  sceneobjectfinder.rs  scenerenderlayer.rs  selectable.rs  stats.rs  trash.rs  voxels.rs  voxels3d.rs
src/graphics/gamemenu/: looks.rs  mod.rs  textref.rs  tutorial.rs
src/graphics/machines/: building.rs  colors.rs  list.rs  mod.rs  radar.rs  targets.rs
src/graphics/machines/radar/: consumption.rs  graphics.rs  graphics_shader.rs  mod.rs
src/graphics/voxels3d/: blocks.rs  changes.rs  lazyworld.rs  mod.rs  voxel_mesh.rs  voxel_physics.rs  wholeworld.rs
