[package]
    name    = "trashure"
    version = "0.1.0"
    edition = "2021"

    # See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
    bevy                = "0.12.1"
    bevy-inspector-egui = "0.21.0"
    bevy-persistent     = { version = "0.4.0", features = ["json"] }
    itertools           = "0.12.0"
    serde               = { version = "1.0.193", features = ["derive"] }
