[package]
    name    = "trashure"
    version = "0.1.0"
    edition = "2021"

    # See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
    bevy                    = "0.12.1"
    bevy-debug-text-overlay = { version = "7.0.0" }
    bevy-inspector-egui     = { version = "0.21.0", optional = true }
    bevy-persistent         = { version = "0.4.0", features = ["json"] }
    bevy_common_assets      = { version = "0.8.0", features = ["json"] }
    bevy_egui               = { version = "0.23.0", optional = true }
    bevy_meshem             = "0.3.0"
    bevy_mod_raycast        = "0.16.0"
    itertools               = "0.12.0"
    once_cell               = "1.18.0"
    rand                    = "0.8.5"
    serde                   = { version = "1.0.193", features = ["derive"] }
    strum                   = { version = "0.25.0", features = ["derive"] }
    uuid                    = "1.6.1"
    bevy_mod_debugdump      = { version = "0.9.0", optional = true }

[features]
    default = [
        # "dbg"
    ]
    dbg = ["bevy-inspector-egui", "bevy_egui"]
    graph = ["bevy_mod_debugdump"]

[profile.dev]
    opt-level = 1

    # Enable high optimizations for dependencies (incl. Bevy), but not for our code:
    [profile.dev.package."*"]
        opt-level = 2

        # [profile.dev.package."bevy-inspector-egui"]
        #     opt-level = 1

[profile.release]
    lto           = true
    codegen-units = 1
    opt-level     = 'z'


    # [profile.release.package."bevy-inspector-egui"]
    #     opt-level = 1
